--- a/src/components/Btn/Btn.module.scss
+++ b/src/components/Btn/Btn.module.scss
@@ -1,8 +1,11 @@
 $green: #1AD471;
 $yellow: #F5D01E;
+$blue: #87BBC9;
 
 .button {
-    padding: 20px 35px;
+    display: flex;
+    align-items: center;
+    padding: 20px;
     border-radius: 30px;
     color: #fff;
     font-size: 40px;
@@ -11,11 +14,11 @@ $yellow: #F5D01E;
     cursor: pointer;
     text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.25);
     box-shadow: 5px 11px 10px rgba(0, 0, 0, 0.09);
+    transition: 0.2s background ease-in-out;
 }
 
 .green {
     background: $green;
-    transition: 0.2s background ease-in-out;
     &:hover {
         background: lighten($green, 5%);
     }
@@ -30,5 +33,14 @@ $yellow: #F5D01E;
     }
     &:active {
         background: darken($yellow, 5%);
+    }
+}
+.blue {
+    background: $blue;
+    &:hover {
+        background: lighten($blue, 5%);
+    }
+    &:active {
+        background: darken($blue, 5%);
     }
 }
