--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,9 @@
     background: #383838;
     border-radius: 20px 20px 0px 0px;
     filter: drop-shadow(3px 10px 15px rgba(0, 0, 0, 0.25));
+    a {
+        text-decoration: none;
+    }
     .logo {
         display: flex;
         align-items: center;
