Добавил страницу избранных

--- a/src/pages/Tasks.module.scss
+++ b/src/pages/Tasks.module.scss
@@ -1,4 +1,5 @@
 .pageHeader {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,5 +15,7 @@
     }
     button {
         position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
