--- a/src/pages/Tasks.module.scss
+++ b/src/pages/Tasks.module.scss
@@ -19,3 +19,26 @@
         transform: translateY(-50%);
     }
 }
+
+.clearBtn {
+    margin: 65px auto 0 auto;
+    background: #87BBC9;
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    border-radius: 30px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+    text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 11px 10px rgba(0, 0, 0, 0.09);
+    transition: 0.2s background ease-in-out;
+    &:hover {
+        background: lighten(#87BBC9, 5%);
+    }
+    &:active {
+        background: darken(#87BBC9, 5%);
+    }
+}
