--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -3,6 +3,13 @@
     a {
         text-decoration: none;
     }
+    h2 {
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 48px;
+        color: #fff;
+        text-shadow: 3px 2px 4px rgba(0, 0, 0, 0.25);
+    }
 }
 
 .buttons {
